corpus/cpp/template/case-15/snapshots/gcc13_14/single_sink_structured/render.default.txt
error: template instantiation failed
--> src/main.cpp:17:22
help: start from the first user-owned template frame and match template arguments
why: no matching function for call to ‘Pair(int, const char [2])’
| src/main.cpp:17:22
|     Pair other(1, "x");
|                      ^
while instantiating:
  - src/main.cpp:11:5 candidate: ‘template<class T> Pair(T, T)-> Pair<T>’
  - src/main.cpp:17:22 deduced conflicting types for parameter ‘T’ (‘int’ and ‘const char*’)
  - src/main.cpp:10:8 candidate: ‘template<class T> Pair(Pair<T>)-> Pair<T>’
omitted 2 internal template frames
error: template instantiation failed
--> src/main.cpp:6:5
help: start from the first user-owned template frame and match template arguments
why: no matching function for call to ‘expect_ptr(int&)’
| src/main.cpp:6:5
|     expect_ptr(value);
|     ^
while instantiating:
  - src/main.cpp:2:6 candidate: ‘template<class T> void expect_ptr(T*)’
omitted 1 internal template frames
other errors:
  - src/main.cpp:17:22: error: template instantiation failed
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output